Preparing submodule vocabs-common

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Vocabs downloads</title>
 </head>
 <body>
-This is an instance to give download links for the voabulary dumps used in the Skosmos projects at ACDH-CH
+<h1>Vocabs downloads</h1>
+<p>This is an instance to serve download links for the voabulary dumps used in the Skosmos projects at ACDH-CH.</p>
 </body>
 </html>
